syntax = "proto3";

package Greeter;

service GreeterService {
    rpc Hello (GreetRequest) returns (GreetResponse);
}

message GreetRequest {
    string name = 1;
}

message GreetResponse {
    string message = 1;
}